# filey

./: .gitignore  README.md  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
logo/: cloud-upload.icns
migrations/: 0001_init.up.sql
src/: App.tsx  main.tsx  models.ts  store.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.sqlx/: query-261bb1557f5ac4ad8109767cbaa8b5f91d98ead95c6cebc287346043da06be9c.json  query-36d751d30ac56a0214fc54aae8db2937a8dfb922a76af7cb996089949384bba2.json  query-3dfab1f7cbd50846f14edb0813852baa55aa989fbba0ceb33e8038b929d7789b.json  query-68af0521d39bbc18f9e6d5265ce3f9689d71deaed69911b6602639b9d3eb761a.json  query-93e7ce26aa49873908ec80a57e5b120187a4e920f7c9be1f8ed64620d23113a1.json  query-b32b9570f09f7168a2c7d625fe650fd98a465c959e8491a0561174d4a3aa8e72.json  query-c394e4577c03962cd398ac08dc6492bf681cd7b7be85e4b2a694ed5c6ac9705c.json  query-e0e60bb9611f66aa252b555d37e0c239ef6670441e1d4c6ed71aadedaf641e96.json  query-e556c659274fb6d184612a9d6cb0f08a59bb6b664462a5fac3f9391a0857ab89.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.down.sql  0001_init.up.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
src-tauri/src/backend/: commands.rs  handlers.rs  mod.rs  model.rs
src-tauri/src/device/: commands.rs  mod.rs
src-tauri/src/files/: commands.rs  mod.rs  model.rs  models.rs
src-tauri/src/http_server/: commands.rs  mod.rs  models.rs  routes.rs
src-tauri/src/info/: commands.rs  mod.rs
src/app/: layout.tsx  page.tsx
src/components/: OsIcon.tsx  ServerConfig.tsx  ToolTip.tsx
src/components/FileList/: FileIcon.tsx  FileItem.tsx  index.tsx
src/components/FileList/FileItem/: CopyButton.tsx  FileIcon.tsx  QrCodeModal.tsx  index.tsx
src/components/MenuBar/: ThemeToggle.tsx  index.tsx
src/components/ServerConfig/: ConnectModal.tsx  index.tsx
src/components/icons/: FileIcon.tsx  Logo.tsx  OsIcon.tsx
src/components/layouts/: MenuBar.tsx
src/components/ui/: CopyButton.tsx  QrCodeModal.tsx  ThemeToggle.tsx  Tooltip.tsx
src/features/files/components/: FileItem.tsx  FileList.tsx
src/features/files/store/: index.ts
src/features/files/types/: index.ts
src/features/server/components/: ConnectModal.tsx  ServerConfig.tsx
src/features/server/store/: index.ts
src/features/server/types/: index.ts
src/utils/: index.ts
