[package]
name = "filey"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "filey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-range = "0.4.0"
infer = "0.16.0"
local-ip-address = "0.6.3"
log = "0.4.22"
mime_guess = "2.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.2", features = [
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
] }
strum = { version = "0.26.3", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["fs", "process"] }
uuid = "1.11.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
battery = "0.7.8"
