[package]
name = "filey"
version = "0.0.1"
description = "Filey - simple alternative to FTP"
authors = ["Wander Watterson"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

# Setting the dev build to be the same like release build because for unknown reason that the
# debug build have all features working on Android, while the release does not
# This is just a quick hack though, I hope Tauri will resolve this in the future
[profile.dev]
opt-level = 3
debug = false
strip = true
debug-assertions = true
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "filey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
axum-range = "0.4.0"
infer = "0.16.0"
local-ip-address = "0.6.3"
log = "0.4.26"
mime_guess = "2.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = [
  "sqlite",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
] }
strum = { version = "0.26.3", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["fs", "process", "signal"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = "1.15.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
battery = "0.7.8"
