[package]
name = "filey"
version = "0.2.0"
description = "Filey - simple alternative to FTP"
authors = ["Wander Watterson"]
license = "GNU General Public License v3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

# Setting the dev build to be the same like release build because for unknown reason that the
# debug build have all features working on Android, while the release does not
# This is just a quick hack though, I hope Tauri will resolve this in the future
[profile.dev]
opt-level = 3
debug = false
strip = true
debug-assertions = true
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "filey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-range = "0.5.0"
infer = "0.19.0"
local-ip-address = "0.6.5"
log = "0.4"
mime_guess = "2.0.5"
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.5", features = [
  "sqlite",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
] }
strum = { version = "0.27.1", features = ["derive"] }
tauri = { version = "2.5.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["fs", "process", "signal"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = "1.16.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
battery = "0.7.8"
